--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Rajan Kumar - Founder of HackersFriend</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Add icon library -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -42,9 +44,17 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Ideas</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Reviews</a>
-          </li>
+          <!-- Dropdown -->
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+            Reviews
+            </a>
+            <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Book Reviews</a>
+            <a class="dropdown-item" href="#">Product Reviews</a>
+            <a class="dropdown-item" href="#">Gadget reviews</a>
+            </div>
+        </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Publications</a>
           </li>
@@ -68,6 +78,12 @@
                 <div style="margin-top: 10%; text-align: center;">
                     <h1>Rajan Kumar</h1>
                     <p>Founder @ HackersFriend</p>
+                    <p><i class="fa fa-globe" aria-hidden="true"></i> India</p>
+                    <center>
+                    <table style="font-size: 30px;">
+                        <tr><td><i class="fa fa-linkedin-square" style="color: blue;" aria-hidden="true"></i></td><td><i class="fa fa-github-square" aria-hidden="true"></i></td> <td><i class="fa fa-youtube-square" aria-hidden="true"></i></i></td></tr>
+                    </table>
+                </center>
                </div>
               </div>
           </div>
