--- a/index.html
+++ b/index.html
@@ -17,30 +17,15 @@
               height: 100%;
             }
             
-            .hero-image {
-              background-image: url("./images/rajan.jpg");
-              background-color: #cccccc;
-              height: 100%;
-              background-position: center;
-              background-repeat: no-repeat;
-              background-size: cover;
-              position: relative;
-            }
-            
-            .hero-text {
-              text-align: center;
-              position: absolute;
-              top: 50%;
-              left: 50%;
-              transform: translate(-50%, -50%);
-              color: white;
-            }
             </style>
     </head>
 
 <body>
     <nav class="navbar navbar-expand-sm bg-light navbar-light justify-content-center">
         <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html">Home</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Ideas</a>
           </li>
@@ -62,7 +47,7 @@
             <a class="nav-link" href="#">Achievements</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="./projects.html">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Books</a>
