--- a/ideas.html
+++ b/ideas.html
@@ -15,7 +15,7 @@
               margin: 0;
               font-family: Arial, Helvetica, sans-serif;
               height: 100%;
-              background: url('./images/rajan.jpg') center no-repeat;
+              background: url('./images/rajan_5.jpg') center no-repeat;
               background-size: cover;
               /* background-repeat: no-repeat; */
               color:white;
@@ -34,16 +34,13 @@
       <li class="nav-item">
         <a class="nav-link" href="./ideas.html">Ideas</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./philosophy.html">Philosophy</a>
-      </li>
     </ul>
   </nav>
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-3" style="background: rgba(39, 39, 39, 0.7); color:white;">
             <h1 class="text-center">
-              Rajan Kumar
+              Rajan's ideas
             </h1>
             <p>
               Rajan is Founder of HackersFriend. He is a software engineer & Enterprenuer.
