--- a/philosophy.html
+++ b/philosophy.html
@@ -15,7 +15,7 @@
               margin: 0;
               font-family: Arial, Helvetica, sans-serif;
               height: 100%;
-              background: url('./images/rajan.jpg') center no-repeat;
+              background: url('./images/rajan_6.jpg') center no-repeat;
               background-size: cover;
               /* background-repeat: no-repeat; */
               color:white;
@@ -34,23 +34,20 @@
       <li class="nav-item">
         <a class="nav-link" href="./ideas.html">Ideas</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./philosophy.html">Philosophy</a>
-      </li>
     </ul>
   </nav>
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-3" style="background: rgba(39, 39, 39, 0.7); color:white;">
             <h1 class="text-center">
-              Rajan Kumar
+              Rajan's Philosophy
             </h1>
-            <p>
+            <!-- <p>
               Rajan is Founder of HackersFriend. He is a software engineer & Enterprenuer.
-            </p>
+            </p> -->
             <div>
               <center>
-              <p><i class="fa fa-map-marker" aria-hidden="true"></i> Gurugram, India</p>
+              <!-- <p><i class="fa fa-map-marker" aria-hidden="true"></i> Gurugram, India</p> -->
             </center>
             </div>
             <!-- <nav class="navbar navbar-dark">
@@ -68,11 +65,11 @@
             </nav> -->
           </div>
           <div class="col-md-3 offset-md-6" style="background: rgba(39, 39, 39, 0.7); height: fit-content;">
-            <center>
+            <!-- <center>
               <table style="font-size: 30px;">
                   <tr><td><i class="fa fa-linkedin-square" aria-hidden="true"></i></td><td><i class="fa fa-github-square" aria-hidden="true"></i></td> <td><i class="fa fa-youtube-square" aria-hidden="true"></i></i></td></tr>
               </table>
-          </center>
+          </center> -->
             <!-- <nav class="navbar navbar-dark">
               <ul class="navbar-nav">
                 <li class="nav-item">
