--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,9 @@
               margin: 0;
               font-family: Arial, Helvetica, sans-serif;
               height: 100%;
+              background: url('./images/rajan_2.jpg') center no-repeat;
+              background-size: cover;
+              background-attachment: fixed;
               background-color: whitesmoke;
             }
     * {
@@ -155,39 +158,17 @@ p{
     </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-light navbar-light justify-content-center">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="./index.html">Home</a>
-              </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Ideas</a>
-          </li>
-          <!-- Dropdown -->
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-            Reviews
-            </a>
-            <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Book Reviews</a>
-            <a class="dropdown-item" href="#">Product Reviews</a>
-            <a class="dropdown-item" href="#">Gadget reviews</a>
-            </div>
-        </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Publications</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Achievements</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./projects.html">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Books</a>
-          </li>
-        </ul>
-      </nav>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
+    <a class="navbar-brand" href="./index.html">Home</a>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="./projects.html">Projects</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./ideas.html">Ideas</a>
+      </li>
+    </ul>
+  </nav>
       <div class="container-fluid">
       <div class="timeline">
         <div class="timeline-container left">
@@ -240,7 +221,7 @@ p{
             <p><i class="fa fa-map-marker" aria-hidden="true"></i> Gurgaon, India</p>
           </div>
         </div>
-        <div class="timeline-container left">
+        <div class="timeline-container left" style="margin-bottom: 100px;">
             <div class="content">
               <h5 style="color: #36a4ee;">June 2013 - June 2017</h5>
               <p style="font-weight: bold; color:gray;"><i>Studied at JNCT</i></p>
@@ -251,6 +232,9 @@ p{
           </div>
     </div>
     </div>
+    <br>
+    <br>
+    <br>
     <br>
 </body>
 </html>
