--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@ p{
   content: '';
   position: absolute;
   width: 6px;
-  background-color: white;
+  background:rgba(39, 39, 39, 0.7);;
   top: 0;
   bottom: 0;
   left: 50%;
@@ -63,8 +63,8 @@ p{
   width: 25px;
   height: 25px;
   right: -17px;
-  background-color: white;
-  border: 4px solid #36a4ee;
+  background: rgba(39, 39, 39, 0.7);
+  border: 4px solid rgba(39, 39, 39, 0.7);
   top: 15px;
   border-radius: 50%;
   z-index: 1;
@@ -116,7 +116,8 @@ p{
 /* The actual content */
 .content {
   padding: 20px 30px;
-  background-color: white;
+  color:white;
+  background: rgba(39, 39, 39, 0.3);;
   position: relative;
   border-radius: 6px;
 }
@@ -158,7 +159,7 @@ p{
     </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
+  <nav class="navbar navbar-expand-sm navbar-dark" style="background:rgba(39, 39, 39, 0.7);">
     <a class="navbar-brand" href="./index.html">Home</a>
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -173,8 +174,8 @@ p{
       <div class="timeline">
         <div class="timeline-container left">
           <div class="content">
-            <h5 style="color: #36a4ee;">July 2021 - Present</h5>
-            <p style="font-weight: bold; color:gray;"><i>Engineer-2 at Deloitte USI</i></p>
+            <h5 style="color: white;">July 2021 - Present</h5>
+            <p style="font-weight: bold; color:white;"><i>Engineer-2 at Deloitte USI</i></p>
             <p>Building Hux by Deloitte, an AI powered Intelligent customer engagement product</p>
                 <table style="font-size: 30px;">
                     <tr><td><a href="https://github.com/rajankumar7" style="color: black;" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a></td></tr>
@@ -185,35 +186,35 @@ p{
         </div>
         <div class="timeline-container right">
           <div class="content">
-            <h4 style="color: #36a4ee;">Feb 2019 - July 2021</h4>
-            <p style="font-weight: bold; color:gray;"><i> Full stack developer at Tata consultancy services</i></p>
+            <h4 style="color: white;">Feb 2019 - July 2021</h4>
+            <p style="font-weight: bold; color:white;"><i> Full stack developer at Tata consultancy services</i></p>
             <p>Wrote more than 40k Lines of both backend and frontend code. Starting from problem statement, designed, architected, coded and shipped multiple enterprise level web applications for businesses across globe. Led innovative initiatives for automation of repetitive business tasks through computer programs and modernization of architecture of old legacy based business web applications.</p>
             <br>
             <p><i class="fa fa-star" aria-hidden="true"></i> 'A' performance rated (Scale: 'A' is Highest, 'D' is lowest)</p>
             <p><i class="fa fa-trophy" aria-hidden="true"></i> On the spot team award (Multiple times), Best performance at ILP, Ranked among top 1k top coders inside TCS globally in internal coding contest (Feb 2019)</p>
             <hr>
-            <p style="color: gray;"><small>April 2019 - June 2021</small></p>
+            <p style="color: white;"><small>April 2019 - June 2021</small></p>
             <p style="font-size: 17px;"><strong>Development & maintenance of 2 web application</strong></p>
             <p>As per requests from customer over tfs/ jira to developer new features / fix bugs on customer provided web application.</p>
             <p><strong>Role: </strong>Full stack developer</p>
             <p><strong>Skills used: </strong>.Net, IIS server, HTML, CSS, JavaScript, SQL Server, Visual Studio, SSMS, TFS, Jira and Git</p>
             <p><i class="fa fa-map-marker" aria-hidden="true"></i> Gurgaon, India</p>
             <hr>
-            <p style="color: gray;"><small>April 2021 - June 2021</small></p>
+            <p style="color: white;"><small>April 2021 - June 2021</small></p>
             <p style="font-size: 17px;"><strong>Modernization of web applications </strong></p>
             <p>This initiative is taken to re-architect legacy based web application and containerize them using Docker containers, and make them ready to be deployed on high performance cloud based kubernetes. </p>
             <p><strong>Role: </strong>Team member among lead developers</p>
             <p><strong>Skills used: </strong>Docker, Docker Desktop, python</p>
             <p><i class="fa fa-map-marker" aria-hidden="true"></i> Gurgaon, India</p>
             <hr>
-            <p style="color: gray;"><small>April 2020 - Dec 2020</small></p>
+            <p style="color: white;"><small>April 2020 - Dec 2020</small></p>
             <p style="font-size: 17px;"><strong>Excel to SQL genertion automation</strong></p>
             <p>Created a web application for customer from scratch to automate a work process that required developers to read xlsx files provided by customer and write SQL scripts.</p>
             <p><strong>Role: </strong> Lead developer</p>
             <p><strong>Skills used: </strong>Django, Python3, requests, DTL, Pandas, json, REST API, HTML, CSS, JavaScript, FastCGI</p>
             <p><i class="fa fa-map-marker" aria-hidden="true"></i> Gurgaon, India</p>
             <hr>
-            <p style="color: gray;"><small>April 2019 - June 2019</small></p>
+            <p style="color: white;"><small>April 2019 - June 2019</small></p>
             <p style="font-size: 17px;"><strong>Web portal to consolidate test reports from multiple testing frameworks</strong></p>
             <p>Created a web application in which testers from multiple portfolios can upload their test results and application can parse details out of it and consolidate it serve to business users.</p>
             <p><strong>Role: </strong> Lead developer</p>
@@ -223,8 +224,8 @@ p{
         </div>
         <div class="timeline-container left" style="margin-bottom: 100px;">
             <div class="content">
-              <h5 style="color: #36a4ee;">June 2013 - June 2017</h5>
-              <p style="font-weight: bold; color:gray;"><i>Studied at JNCT</i></p>
+              <h5 style="color: white;">June 2013 - June 2017</h5>
+              <p style="font-weight: bold; color:white;"><i>Studied at JNCT</i></p>
               <p>Graduated with Honours, Bachelors of Engineering in Computer Science &amp; Engineering</p>
               <hr>
               <p><i class="fa fa-map-marker" aria-hidden="true"></i> Bhopal, India</p>
