--- a/ideas.html
+++ b/ideas.html
@@ -25,7 +25,7 @@
     </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
+  <nav class="navbar navbar-expand-sm navbar-dark" style="background:rgba(39, 39, 39, 0.7);">
     <a class="navbar-brand" href="./index.html">Home</a>
     <ul class="navbar-nav">
       <li class="nav-item">
