--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
+  <nav class="navbar navbar-expand-sm navbar-dark" style="background:rgba(39, 39, 39, 0.7);">
     <a class="navbar-brand" href="./index.html">Home</a>
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -40,6 +40,7 @@
       </li>
     </ul>
   </nav>
+  <br>
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-3" style="background: rgba(39, 39, 39, 0.7); color:white;">
