--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               margin: 0;
               font-family: Arial, Helvetica, sans-serif;
               height: 100%;
-              background: url('./images/rajan.jpg') center no-repeat;
+              background: url('./images/rajan_2.jpg') center no-repeat;
               background-size: cover;
               /* background-repeat: no-repeat; */
               color:white;
