--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
               margin: 0;
               font-family: Arial, Helvetica, sans-serif;
               height: 100%;
-              background: url('./images/rajan_2.jpg') center no-repeat;
+              background: url('./images/rajan.jpg') center no-repeat;
               background-size: cover;
               background-attachment: fixed;
               background-color: whitesmoke;
