--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
               background-size: cover;
               /* background-repeat: no-repeat; */
               color:white;
+              background-attachment: fixed;
             }
             
             </style>
@@ -41,72 +42,31 @@
     </ul>
   </nav>
   <br>
-      <div class="container-fluid">
+      <div class="container-fluid" style="height: 100%;">
         <div class="row">
-          <div class="col-md-3" style="background: rgba(39, 39, 39, 0.7); color:white;">
-            <h1 class="text-center">
-              Rajan Kumar
-            </h1>
-            <p>
-              Rajan is Founder of HackersFriend. He is a software engineer & Enterprenuer.
-            </p>
-            <div>
-              <center>
-              <p><i class="fa fa-map-marker" aria-hidden="true"></i> Gurugram, India</p>
-            </center>
-            </div>
-            <!-- <nav class="navbar navbar-dark">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link 1</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link 2</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link 3</a>
-                </li>
-              </ul>
-            </nav> -->
-          </div>
           <div class="col-md-3 offset-md-6" style="background: rgba(39, 39, 39, 0.7); height: fit-content;">
-            <center>
-              <table style="font-size: 30px;">
-                  <tr><td><i class="fa fa-linkedin-square" aria-hidden="true"></i></td><td><i class="fa fa-github-square" aria-hidden="true"></i></td> <td><i class="fa fa-youtube-square" aria-hidden="true"></i></i></td></tr>
-              </table>
-          </center>
-            <!-- <nav class="navbar navbar-dark">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link 1</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link 2</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link 3</a>
-                </li>
-              </ul>
-            </nav> -->
           </div>
         </div>
-          <!-- <div class="row">
-              <div class="col-6" style="background: linear-gradient(rgba(255, 255, 255, 0.15), rgba(255,255,255,.15)), url('./images/rajan.jpg'); background-size: contain; background-repeat: no-repeat; height: 700px;">
-               
-              </div>
-              <div class="col-6">
-                <div style="margin-top: 10%; text-align: center;">
-                    <h1>Rajan Kumar</h1>
-                    <p>Founder @ HackersFriend</p>
-                    <p><i class="fa fa-globe" aria-hidden="true"></i> India</p>
-                    <center>
-                    <table style="font-size: 30px;">
-                        <tr><td><i class="fa fa-linkedin-square" style="color: blue;" aria-hidden="true"></i></td><td><i class="fa fa-github-square" aria-hidden="true"></i></td> <td><i class="fa fa-youtube-square" aria-hidden="true"></i></i></td></tr>
-                    </table>
-                </center>
-               </div>
-              </div>
-          </div> -->
+        <div class="mr-auto ml-auto" style="border-radius:20px; padding: 20px; background: rgba(39, 39, 39, 0.3); color:white; margin-top: 17%; width: fit-content;">
+          <h1 class="text-center">
+            Rajan Kumar
+          </h1>
+          <hr style="height:1px;border:none;color:white;background-color:white;">
+          <h4 class="text-center">
+            Rajan is a software engineer & Enterprenuer. He is Founder of HackersFriend.
+          </h4>
+          <div>
+            <center>
+            <p><i class="fa fa-map-marker" aria-hidden="true"></i> Gurugram, India</p>
+          </center>
+          <center>
+            <table style="font-size: 30px;">
+                <tr><td><i class="fa fa-linkedin-square" aria-hidden="true"></i></td><td><i class="fa fa-github-square" aria-hidden="true"></i></td> <td><i class="fa fa-youtube-square" aria-hidden="true"></i></i></td></tr>
+            </table>
+        </center>
+          </div>
+        </div>
       </div>
+      <br>
 </body>
 </html>
