--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div style="color: black; border-radius: 20px; border-bottom: solid; border-color: whitesmoke; padding-bottom: 1px;">
        <div class="row" style="background-color: white;">
          <div class="col-md-4">
-          <img src="./images/rajan_5.jpg" alt="" style="width: fit-content; height: 300px; border-bottom-left-radius: 20px; border-top-right-radius: 20%;">
+          <img src="./images/rajan_5.jpg" alt="" style="width: 300px; height: 300px; border-bottom-left-radius: 20px; border-top-right-radius: 20%;">
          </div>
          <div class="col-md-8">
            <br>
@@ -109,7 +109,7 @@
              </p>
           </div>
           <div class="col-md-4">
-            <img src="./images/rajan_3.jpg" alt="" style="width: fit-content; height: 300px; border-bottom-left-radius: 20px; border-top-right-radius: 20%;">
+            <img src="./images/rajan_3.jpg" alt="" style="width: 300px; height: 300px; border-bottom-left-radius: 20px; border-top-right-radius: 20%;">
            </div>
         </div>
        </div>
@@ -117,7 +117,7 @@
        <div style="color: black; border-radius: 20px; border-bottom: solid; border-color: whitesmoke; padding-bottom: 1px;">
         <div class="row" style="background-color: white;">
           <div class="col-md-4">
-           <img src="./images/rajan_6.jpg" alt="" style="width: fit-content; height: 300px; border-bottom-left-radius: 20px; border-top-right-radius: 20%;">
+           <img src="./images/rajan_6.jpg" alt="" style="width: 300px; height: 300px; border-bottom-left-radius: 20px; border-top-right-radius: 20%;">
           </div>
           <div class="col-md-8">
             <br>
