--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               background-size: cover;
               /* background-repeat: no-repeat; */
               color:white;
-              background-attachment: fixed;
+              background-attachment: scroll;
             }
             a, a:hover{
               color:yellow;
