--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
               height: 100%;
               background: url('./images/rajan.jpg') center no-repeat;
               background-size: cover;
-              background-attachment: fixed;
+              background-attachment:scroll;
               background-color: whitesmoke;
             }
     * {
